--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -90,6 +90,12 @@
    "outputs": [],
    "source": [
     "#|export\n",
+    "_CODE_MATPLOTLIB_INLINE = \"\"\"\n",
+    "from IPython import get_ipython\n",
+    "try: get_ipython().run_line_magic('matplotlib', 'inline')\n",
+    "except ModuleNotFoundError: pass\n",
+    "\"\"\".strip()\n",
+    "\n",
     "class CaptureShell(FastInteractiveShell):\n",
     "    \"Execute the IPython/Jupyter source code\"\n",
     "    def __init__(self,\n",
@@ -98,7 +104,7 @@
     "        InteractiveShell._instance = self\n",
     "        self.out,self.count = [],1\n",
     "        self.exc = self.result = self._fname = self._cell_idx = None\n",
-    "        self.run_cell('%matplotlib inline')\n",
+    "        self.run_cell(_CODE_MATPLOTLIB_INLINE)\n",
     "        if path: self.set_path(path)\n",
     "        \n",
     "    def set_path(self, path):\n",
@@ -214,7 +220,7 @@
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
        "  'text': ['CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns',\n",
-       "   'Wall time: 3.34 us']}]"
+       "   'Wall time: 2.62 us']}]"
       ]
      },
      "execution_count": null,
@@ -293,9 +299,9 @@
      "text": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)\n",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOops\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\n",
+      "\u001b[0;32m<ipython-input-1-01648acb07bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Oops\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m: Oops\n"
      ]
     }
@@ -507,7 +513,7 @@
        "  'output_type': 'error',\n",
        "  'traceback': ['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m',\n",
        "   '\\x1b[0;31mException\\x1b[0m                                 Traceback (most recent call last)',\n",
-       "   'Input \\x1b[0;32mIn [1]\\x1b[0m, in \\x1b[0;36m<cell line: 1>\\x1b[0;34m()\\x1b[0m\\n\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOopsie!\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
+       "   '\\x1b[0;32m<ipython-input-1-1c97c1d317ab>\\x1b[0m in \\x1b[0;36m<module>\\x1b[0;34m\\x1b[0m\\n\\x1b[0;32m----> 1\\x1b[0;31m \\x1b[0;32mraise\\x1b[0m \\x1b[0mException\\x1b[0m\\x1b[0;34m(\\x1b[0m\\x1b[0;34m\"Oopsie!\"\\x1b[0m\\x1b[0;34m)\\x1b[0m\\x1b[0;34m\\x1b[0m\\x1b[0;34m\\x1b[0m\\x1b[0m\\n\\x1b[0m',\n",
        "   '\\x1b[0;31mException\\x1b[0m: Oopsie!']}]"
       ]
      },
@@ -717,15 +723,15 @@
       "While Executing Cell #2:\n",
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)\n",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# some comments\u001b[39;00m\n",
-      "\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;32m----> 3\u001b[0m \u001b[43mfoo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\n",
-      "File \u001b[0;32m~/git/execnb/tests/err.py:2\u001b[0m, in \u001b[0;36mfoo\u001b[0;34m()\u001b[0m\n",
-      "\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfoo\u001b[39m():\n",
-      "\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;241m13\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m98\u001b[39m\n",
-      "\n",
+      "\u001b[0;32m<ipython-input-1-b968a57a586e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[1;32m      1\u001b[0m \u001b[0;31m# some comments\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hello'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m----> 3\u001b[0;31m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "\u001b[0;32m~/github/execnb/tests/err.py\u001b[0m in \u001b[0;36mfoo\u001b[0;34m()\u001b[0m\n",
+      "\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0;36m13\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m98\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
       "\u001b[0;31mAssertionError\u001b[0m: \n",
       "\n"
      ]
@@ -788,14 +794,14 @@
      "data": {
       "text/plain": [
        "[{'cell_type': 'code',\n",
-       "  'execution_count': 1,\n",
+       "  'execution_count': None,\n",
        "  'id': 'a63ce885',\n",
        "  'metadata': {},\n",
        "  'outputs': (#0) [],\n",
        "  'source': 'a=2',\n",
        "  'idx_': 0},\n",
        " {'cell_type': 'code',\n",
-       "  'execution_count': 2,\n",
+       "  'execution_count': None,\n",
        "  'id': 'ea528db5',\n",
        "  'metadata': {},\n",
        "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2']}],\n",
